feat(update): stuff and things
